# thesma-mcp

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/hooks/: pr-architecture-check.sh
.github/workflows/: ci.yml  publish.yml
src/thesma_mcp/: client.py  formatters.py  resolver.py  server.py
src/thesma_mcp/tools/: companies.py  compensation.py  events.py  filings.py  financials.py  holdings.py  insider_trades.py  ratios.py  screener.py
tests/: conftest.py  test_client.py  test_companies.py  test_compensation.py  test_events.py  test_filings.py  test_financials.py  test_formatters.py  test_holdings.py  test_insider_trades.py  test_ratios.py  test_resolver.py  test_screener.py  test_version.py
