[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thesma-mcp"
version = "0.1.0"
description = "MCP server that gives AI assistants native access to Thesma's SEC EDGAR data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0,<2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "respx",
]

[project.scripts]
thesma-mcp = "thesma_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["mcp.*", "respx.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
